--- a/TemDeTudo/app/src/main/res/layout/activity_main.xml
+++ b/TemDeTudo/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,10 @@
         tools:layout_editor_absoluteY="1dp">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="486dp"
-            android:padding="40dp"
-            app:srcCompat="@drawable/images" />
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/temdetudo" />
 
         <Button
             android:id="@+id/bCadastraSe"
